--- a/public/css/style.css
+++ b/public/css/style.css
@@ -852,5 +852,29 @@ a:focus {
   color: #cbc9c9;
 }
 
+/* The Header Section */
+header {
+  background: #fefbe6;
+  padding: 10px 20px;
+  border-bottom: 2px solid #7b8e4e;
+}
+
+/* Navbar section */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.navbar-brand img {
+  height: 50px;
+}
+
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
