--- a/public/css/style.css
+++ b/public/css/style.css
@@ -871,6 +871,23 @@ transform: translate(-50%, -50%);background-color: rgba(0, 0, 0, 0.1); color:whi
 .shop_section .box{transition: transform 0.3s ease-in-out;}
 .shop_section .box:hover{transform: scale(1.1);}
 
+
+
+.box{background-color: white; border: 2px solid black; padding:15px; text-align: center; border-radius: 10px; position: relative; overflow: hidden; }
+.img-box img{max-width: 100%; height: auto; object-fit: cover; display: block;}
+.detail-box h6{font-size: 10px; margin: 10px 0;}
+.sale-price{color:#426b1f; font-weight: bold;}
+.original-price{text-decoration: line-through; color: #000000; font-size: 10px; margin-left: 5px;}
+.sale{background-color: #426b1f; color: white; padding: 5px 10px;border-radius: 5px; font-size: 10px; display: inline-block; margin-top: 5px;}
+
+
+
+
+
+
+
+
+
 /* footer section*/
 
 footer {
