--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,31 +391,24 @@ a:focus {
 }
 
 .shop_section .box .img-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 15px 30px;
-    height: 245px;
+    align-items: flex-start;
+    height: 300px;
+    border-radius: 10px;
 }
 
 .shop_section .box .img-box img {
-    max-width: 100%;
-    max-height: 145px;
+    max-width: 280px;
+    max-height: 100%;
 }
 
 .shop_section .box .detail-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    text-align: left;
+}
+
+.shop_section .box .detail-box {
+    text-align: left;
 }
 
 .shop_section .box .detail-box h6 span {
