--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4101,8 +4101,8 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #495057;
-  background-color: #fff;
+  color: #ffffff;
+  background-color: #4B7C47;
   border-color: #dee2e6 #dee2e6 #fff;
 }
 
